<resources>
    <string name="app_name">CinemaApp</string>
    <string name="banner">Banner</string>
    <string name="back">Back</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="storyline">Storyline</string>
    <string name="avengers_story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
</resources>