<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner"
            android:scaleType="fitCenter"
            android:src="@drawable/orig"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/my_gradient"
            app:layout_constraintBottom_toBottomOf="@id/banner"
            app:layout_constraintTop_toTopOf="@id/banner" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_path" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/back"
                android:textColor="#80FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/rate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="13+"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/banner"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineVerticalCenter"
            app:layout_constraintTop_toBottomOf="@id/rate" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Action, Adventure, Fantasy"
            android:textColor="@color/tag"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/movie_name" />

        <LinearLayout
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/tag">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:src="@drawable/ic_star_icon"
                app:tint="@color/tag" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:src="@drawable/ic_star_icon"
                app:tint="@color/tag" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:src="@drawable/ic_star_icon"
                app:tint="@color/tag" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:src="@drawable/ic_star_icon"
                app:tint="@color/tag" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_star_icon" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="125 REVIEWS"
                android:textColor="#6D6D80"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.51" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <TextView
            android:id="@+id/story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:lineHeight="20sp"
            android:text="@string/avengers_story"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/story" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/cast_heading"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/banner"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/dawney" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Robert Downey Jr."
                    android:textColor="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/banner"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/dawney" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chris Hemsworth"
                    android:textColor="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/banner"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/dawney"
                    android:foreground="@drawable/rounded_img"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mark Ruffalo"
                    android:textColor="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/banner"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/dawney" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Robert Downey Jr."
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
